# bge_retrieval

./: .gitignore  README.md
embedding/: Dockerfile  deploy.sh  pyproject.toml  server.py
embedding/config/: config.dev.yml  config.prod.yml
embedding/controller/: embedding_controller.py
embedding/service/: embedding_service.py
embedding/utils/: exception.py  log.py  request.py  response.py
models/: download_models.py
rerank/: Dockerfile  deploy.sh  pyproject.toml  server.py
rerank/config/: config.dev.yml  config.prod.yml  loader.py
rerank/controller/: rerank_controller.py
rerank/service/: rerank_service.py
rerank/utils/: request.py
