[project]
name = "embedding"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.115.6",
  "uvicorn==0.34.0",
  "pyyaml",
  "aiofiles",
  "pydantic==2.10.4",
  "pymilvus[model]==2.5.0",
  "torch==2.3.0",
  "transformers==4.44.2",
  "FlagEmbedding==1.3.3"
]

[tool.uv]
index-strategy = "first-index"

[[tool.uv.index]]
name = "tencent"
url = "https://mirrors.cloud.tencent.com/pypi/simple"
default = true
